charts/nowcom/0.2.10/README.md
# Infrastucture

Nowcom Network Automation Platform - Developed by Nowcom Infrastructure Team

Release v0.2.0
-  New API Integration

Release v0.2.1
-  Fixed Bug: Add validation on add subnet 

Release v0.2.2
-  Pointed to New VM IP

Release v0.2.3
-  Add Network Name in Table
-  Add Placeholder in subnet during VNET Creation

Release v0.2.4
- New API Kubernetes CRD
- Design for NAT Gateway (unfinished)

Release v0.2.5
- Add sample sortable table / commented
- Fixed some issues under vnet

Release v0.2.6
- Refactor Codes

Release v0.2.7
- Refactor design

Release v0.2.8
- Added placeholders for different kinds of Infra
- remove NAT Gateway page

Release v0.2.9
- Refactor Create Network
- Added DHCP for subnets
- Implement Store for network
- Added Bulk Delete for networks

Release v0.2.10
- Update API URL
- Update Error Handlers for Form
- Set 10.0.0.0 for Normal Subnet
- Fix hydration issue for Network
- Rename Virtual Network to Network